src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_WrongTargetInPropertyTrigger.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <DockPanel.Resources>
        <Style TargetType="{x:Type Button}">
            <Setter Property="Template">
            
            <ControlTemplate TargetType="{x:Type Button}">
                <Canvas>
                    <Ellipse x:Name="outer" />
                </Canvas>
            <ControlTemplate.Triggers>

            <Trigger Property="IsMouseOver" Value="true">
            <Setter Property="Fill" TargetName="out" Value="Blue" />
            </Trigger>
            </ControlTemplate.Triggers>
            </ControlTemplate>
            
            </Setter>
        </Style>
    </DockPanel.Resources>
    
    <Button />
</DockPanel>
</Page>
